Fixed zoom to display better on smaller screens.

--- a/css/site.css
+++ b/css/site.css
@@ -20,7 +20,7 @@ body {
     background-size: 3.1em 2.90em;
 	background-position: 1.3em 0.2em;
 	cursor:url('../img/pencil.gif'), pointer;
-	zoom: 200%;
+	zoom: 150%;
 }
 
 h1 {
